# T3RL-LLVM

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: models.yaml
data/bootstrap/: seed.jsonl
data/c_sources/: abs_branch.c  add_same.c  add_sub_cancel.c  add_zero.c  and_minus_one.c  and_self.c  array_max.c  array_sum.c  avg3.c  bcd_encode.c  bool_to_int.c  bubble_pass.c  clamp.c  classify.c  cmp_self.c  color_blend.c  count_bits_set.c  count_up.c  day_of_week.c  det2x2.c  det3x3.c  dot_product.c  double_negate.c  factorial.c  fib.c  find_index.c  gcd.c  hash_combine.c  hash_mix.c  is_even.c  isqrt_approx.c  leap_year.c  lerp.c  matrix_trace.c  max2.c  min2.c  min4.c  mod_one.c  mul_add.c  mul_by_two.c  (+24 more)
data/corpus/: .gitkeep
docs/: README.md  alive2-build.md  phase1-partA-findings.md  phase1-partA-plan.md  phase1-partB-plan.md  phase2-findings.md
docs/phase1/: README.md  partA-findings.md  partA-plan.md  partB-plan.md  perf-scorer-findings.md
docs/phase2/: README.md  findings.md
scripts/: fetch-corpus.sh  make_plots.py
scripts/alive2/: 01-prereqs.sh  02-build-alive2.sh  02-build-llvm.sh  03-build-alive2.sh  env.sh
src/probe/: __init__.py  alive_harness.py  bestofk.py  build_corpus.py  extract.py  lower.py  metrics.py  outcome.py  perf.py  perf_sanity.py  phase2_baseline.py  prompts.py  run_probe.py  schema.py  (+3 more)
tests/: test_alive_harness.py  test_bestofk.py  test_build_corpus.py  test_extract.py  test_outcome.py  test_perf_mca.py  test_perf_sanity.py  test_phase2_baseline.py  test_schema.py  test_stub_verifier.py  test_verify_corpus.py
(+13 files in other folders)
