[project]
name = "t3rl-probe"
version = "0.1.0"
description = "Phase 1 Part B — model capability probe for TTRL LLVM superoptimization"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "tqdm>=4.66",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# GPU-only local inference backend; skip on API-only machines.
local = ["vllm>=0.5"]
dev = ["pytest>=8.0"]

[project.scripts]
alive-harness = "probe.alive_harness:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/probe"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
